# Lmod

./: .gitignore  README.md  README.rst  activate.sh  install  install.sh  install_lmod.sh  install_lua.sh  meson.build  release.sh  relocate.sh  setup.sh  setup_lmod.sh  setup_lua.sh  usrapt.sh
.github/workflows/: build.yml  release.yml
config/etc/fish/conf.d/: z30-lmod-globals.fish
config/etc/profile.d/: z30-lmod-globals.csh  z30-lmod-globals.sh  z40-lmod-restore.csh  z40-lmod-restore.sh
config/lmod/: SitePackage.lua
lmod/: .gitignore
lmod/etc/fish/conf.d/: z40-lmod-restore.fish  z50-lmod-home.fish
lmod/etc/profile.d/: z50-lmod-home.csh  z50-lmod-home.sh
lmod/lua/: meson.build
lmod/recipes/: Singularity.Mila  Singularity.Mila.dev  Singularity.alpine  Singularity.static-lua  ld.lua  peachpy.patch
lmod/recipes/buildroot/aarch64/: .config  alpine-linux.cross
lmod/recipes/buildroot/ppc64le/: .config  alpine-linux.cross
lmod/recipes/buildroot/x86_64/: .config
lua/: meson.build  modulefile.lua
lua/buildroot/aarch64/: .config
lua/buildroot/ppc64le/: .config
lua/buildroot/riscv64/: .config  alpine-linux.cross
lua/buildroot/x86_64/: alpine-linux.cross
subprojects/: .gitignore  buildroot.wrap  lfs.wrap  lmod.wrap  lua.wrap  luaposix.wrap
subprojects/packagefiles/buildroot/: meson.build
subprojects/packagefiles/buildroot/package/fakeroot/: 0006-fakeroot-musl-send_get_xattr.patch
subprojects/packagefiles/lfs/: meson.build
subprojects/packagefiles/lmod/: meson.build
subprojects/packagefiles/lpeg/: meson.build
subprojects/packagefiles/lua/: 001-loadlib.patch  apply-patch.sh  lua-pack.py  lua.c  luac.c  main.c  meson.build
subprojects/packagefiles/luaposix/: meson.build
templates/: AptPackage.lua  LuaModuleFile.lua  StdEnv.lua
